# ChangeLog for media-gfx/graphicsmagick
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.83 2011/12/16 09:34:05 naota Exp $

  16 Dec 2011; Naohiro Aota <naota@gentoo.org> graphicsmagick-1.3.12-r1.ebuild:
  Add ~x86-fbsd

  23 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  -graphicsmagick-1.3.12.ebuild:
  old

  23 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  graphicsmagick-1.3.12-r1.ebuild:
  alpha/sparc stable wrt #387361

  18 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  graphicsmagick-1.3.12-r1.ebuild:
  x86 stable wrt bug #387361

  17 Oct 2011; Jeroen Roovers <jer@gentoo.org> graphicsmagick-1.3.12-r1.ebuild:
  Stable for HPPA (bug #387361).

  17 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  graphicsmagick-1.3.12-r1.ebuild:
  ppc/ppc64 stable wrt #387361

  17 Oct 2011; Samuli Suominen <ssuominen@gentoo.org>
  graphicsmagick-1.3.12-r1.ebuild:
  amd64 stable wrt #387361

  28 Sep 2011; Samuli Suominen <ssuominen@gentoo.org>
  graphicsmagick-1.3.12-r1.ebuild:
  Use gentoo mirrors.

*graphicsmagick-1.3.12-r1 (07 Aug 2011)

  07 Aug 2011; Samuli Suominen <ssuominen@gentoo.org>
  +graphicsmagick-1.3.12-r1.ebuild:
  Fix compability with libpng15 wrt #362637 by Jonathan Callen

  08 Nov 2010; Markus Meier <maekke@gentoo.org>
  graphicsmagick-1.3.12.ebuild:
  change jpeg dep to virtual/jpeg

  19 Jul 2010; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Removing myself as maintainer

  21 Jun 2010; Samuli Suominen <ssuominen@gentoo.org>
  graphicsmagick-1.3.12.ebuild:
  Restrict media-libs/lcms depend to old version.

  30 May 2010; Raúl Porcel <armin76@gentoo.org>
  graphicsmagick-1.3.12.ebuild:
  alpha/sparc stable wrt #318647

  16 May 2010; Markus Meier <maekke@gentoo.org>
  graphicsmagick-1.3.12.ebuild:
  amd64/x86 stable, bug #318647

  11 May 2010; Brent Baude <ranger@gentoo.org> graphicsmagick-1.3.12.ebuild:
  stable ppc64, bug 318647
