@@ -1,17 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+AUX graphicsmagick-1.3.13-lzma_configure.patch 710 RMD160 8cf2edfbc65d4ea793f7c8881cc1647787f0816c SHA1 12e73c07627e6d1cb387bb3b8bac8331dec4b98b SHA256 b0577b2a5445c21fba810a3e6cec92f6a2f4fd5c0c09560331c3025cb8a7d815
 AUX graphicsmagick-1.3.7-debian-fixed.patch 14493 RMD160 cbeccbd775d60da7f2b498540fdef8b08189eeb6 SHA1 2da7acdf46401cbc294170919c592cb842ab2afa SHA256 da17fbb6e30ca42b2d07871cc730de8f5ad61df9387cf22948fe1dcb72263b8c
 AUX graphicsmagick-1.3.7-perl-ldflags.patch 991 RMD160 e234224a939892f04a82b83e48ef475318183b28 SHA1 5e5c89d808bd3040945c64a60e1f8df35c03053d SHA256 f1ff9bf3009b1e353089ed27067bee2895b4e7f0d9e15100abdebac20bef8644
 DIST GraphicsMagick-1.3.12.tar.bz2 6690493 RMD160 0a2749ee38a63c00c3ee6259ea7ea65c2bccc621 SHA1 6b8a414af162ad8679f2f04b10f128edc8ee3233 SHA256 4ceea8558c959fba847b2a4cd92232aac37f5f6a59dda234bc17ef83b90e57d7
+DIST GraphicsMagick-1.3.13.tar.xz 4899208 RMD160 ff8170a15ce1a2f4441273704bbefe9f45e3950d SHA1 b85b21785bb072fd795f7fc6ac902cffae4e96e6 SHA256 45e3a676309b25837f34ae78a9f46573af260e38f4ba4960f16b70b8e1968f22
 DIST graphicsmagick-1.3.12-libpng15.patch.bz2 11866 RMD160 922a212315319c5c0818fea61263623b5701bbe1 SHA1 f3b416d7e2fe668e4da05b1dcf6078fa3cf087d8 SHA256 553bddf928debabd438a25719f5c5a559bfd33f26c0f17dd4eab8438d91edddd
 EBUILD graphicsmagick-1.3.12-r1.ebuild 3709 RMD160 b0b5b69b1a1dad255a235dc1939b3c9591c8be9b SHA1 4a0b3b3d4f009f3cf21d19f436244257037fe221 SHA256 8465cf675fb8da31c84550072872cc0502e3528c5c6a534845999213683d0b61
-MISC ChangeLog 8004 RMD160 892f0f07a3f4c8cd314eb647561bf51d10f0cc95 SHA1 6a1d7450282b0f0bbc915db26ce9c388fc3108ed SHA256 2e7a1c1b693219d01470c39a0983f7c4a018db9699b0377b7398a1a372dac3d7
+EBUILD graphicsmagick-1.3.13.ebuild 3110 RMD160 71fd41289e452b6d849ea1232f56673d33a4da76 SHA1 eef177a183b9f3579a938189bd95d35c865138bc SHA256 b7afd3fc699f244f1fa9aff2dbdc72e8f4f092b6fe2923232927b88c7d9e4478
+MISC ChangeLog 8231 RMD160 50b0b567ca09bb1435b12f9f39ebf3334ccbaef7 SHA1 ff383c401e21ae30055975a2ed4ec803a942fc74 SHA256 24012865d072586cd10740940d8525b86df813da71d1769dbf339ce6be7e38d2
 MISC metadata.xml 948 RMD160 777ea220f961149cf9da9f4d0150c613df0ca92b SHA1 cf14a02282804546e796d61d143b0add1c086cfd SHA256 885686871e4c7d112c5fcbbe0a9056a286c5714985643844bb3a078175085ac6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (FreeBSD)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7rEJoACgkQGpDnPLSHuMCpogCcC3HFF5fFaHoLdddSpRvnAVTQ
-ihQAoMcvNxtB53RQbMm0ziYLfprp7UBG
-=seDJ
+iQEcBAEBAgAGBQJO+4LdAAoJEEdUh39IaPFNrS4IAKTjjnNBTpTRWS2E6P00bbj0
+lbCh0ePNX+cuJQRAyg0n7nq/Lx06wdjZNUK41rhFEcbvfPaD3DisWhLslLitpLS6
+ApldN8Z60wGbwmFEAurWX3IQXD3EnD1CmsWT5FHVw46wwqGxEKxBltH0ODB8hCUp
+cHfhYzTVzbyt04DGy+5xe6zWGbAkZ++GQxaT7o4sw+GvUgK4SH9S4iH8rDkXbt0q
++boh55DClqI2GKhFj/+R0lSQzTUr+t6vJu1YrkHkanRGIY151DsN2sb2nDHbY53X
+dgJ/XucE2/iAlbgIwN0H6FiPkXTnvL39WescsRU8yeKYW9OQhUvl48d+Zb/RRVg=
+=XPjD
 -----END PGP SIGNATURE-----
