@@ -1,6 +1,13 @@
 # ChangeLog for media-gfx/graphicsmagick
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.83 2011/12/16 09:34:05 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.84 2011/12/28 20:59:28 ssuominen Exp $
+
+*graphicsmagick-1.3.13 (28 Dec 2011)
+
+  28 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
+  +graphicsmagick-1.3.13.ebuild,
+  +files/graphicsmagick-1.3.13-lzma_configure.patch:
+  Version bump wrt #395611 by Ivan S. Titov
 
   16 Dec 2011; Naohiro Aota <naota@gentoo.org> graphicsmagick-1.3.12-r1.ebuild:
   Add ~x86-fbsd
